devops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-techtalk
  namespace: techtalk
spec:
  type: NodePort
  selector:
    app: app-techtalk
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3500
